<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".BaseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in"/>

    <Button
        android:id="@+id/patient_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient"/>

    <Button
        android:id="@+id/doctor_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor"/>

</LinearLayout>