<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    tools:context=".PatientStartEditInfoActivity">

    <!--<TextView-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/iin"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"/>-->

    <!--<EditText-->
        <!--android:id="@+id/iin"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_gravity="center"/>-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_iin"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--<TextView-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:textSize="20sp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/phone_number"/>-->

    <!--<EditText-->
        <!--android:id="@+id/phone_number"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_gravity="center"/>-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:elevation="20dp"
        android:text="@string/done"/>

</LinearLayout>